Etat de l'art de l'imitation supervisée

--- a/Manuscrit/Biblio.bib
+++ b/Manuscrit/Biblio.bib
@@ -1,4 +1,123 @@
+@article{bain2000framework,
+  title={A framework for behavioural cloning},
+  author={Bain, Michael and Sommut, Claude},
+  journal={Machine Intelligence 15},
+  volume={15},
+  pages={103},
+  year={2000},
+  publisher={OUP Oxford}
+}
+@article{bentivegna2004learning,
+  title={Learning to act from observation and practice},
+  author={Bentivegna, Darrin C and Atkeson, Christopher G and Ude, Ale{\v{s}} and Cheng, Gordon},
+  journal={International Journal of Humanoid Robotics},
+  volume={1},
+  number={04},
+  pages={585--611},
+  year={2004},
+  publisher={World Scientific}
+}
+@inproceedings{saunders2006teaching,
+  title={Teaching robots by moulding behavior and scaffolding the environment},
+  author={Saunders, Joe and Nehaniv, Chrystopher L and Dautenhahn, Kerstin},
+  booktitle={Proceedings of the 1st ACM SIGCHI/SIGART conference on Human-robot interaction},
+  pages={118--125},
+  year={2006},
+  organization={ACM}
+}
+@inproceedings{chernova2007confidence,
+  title={Confidence-based policy learning from demonstration using gaussian mixture models},
+  author={Chernova, Sonia and Veloso, Manuela},
+  booktitle={Proceedings of the 6th international joint conference on Autonomous agents and multiagent systems},
+  pages={233},
+  year={2007},
+  organization={ACM}
+}
+@conference{sammut1992learning,
+	Annote = {Cit{\'e} par \cite{abbeel2004apprenticeship} :
+	"Most of these methods try to directly mimic the demonstrator by applying a supervised learning algorithm to learn a direct mapping from the states to the actions."},
+	Author = {Sammut, C. and Hurst, S. and Kedzier, D. and Michie, D.},
+	Booktitle = {Proceedings of the ninth international workshop on Machine learning},
+	Date-Added = {2010-09-01 16:51:20 +0200},
+	Date-Modified = {2010-09-01 16:51:32 +0200},
+	Pages = {385--393},
+	Title = {Learning to fly},
+	Year = {1992}}
 
+@misc{vapnik1998statistical,
+	Annote = {Cit{\'e} de \cite{abbeel2004apprenticeship} pour un obscur th{\'e}or{\`e}me.},
+	Author = {Vapnik, V.},
+	Date-Added = {2010-09-01 17:27:25 +0200},
+	Date-Modified = {2010-09-06 12:01:22 +0200},
+	Publisher = {Wiley, New York},
+	Title = {Statistical learning theory. 1998},
+	Year = {1998}}
+
+@article{hastie2005elements,
+  title={The elements of statistical learning: data mining, inference and prediction},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome and Franklin, James},
+  journal={The Mathematical Intelligencer},
+  volume={27},
+  number={2},
+  pages={83--85},
+  year={2005},
+  publisher={Springer}
+}
+
+@incollection{pomerleau1993knowledge,
+  title={Knowledge-based training of artificial neural networks for autonomous robot driving},
+  author={Pomerleau, Dean A},
+  booktitle={Robot learning},
+  pages={19--43},
+  year={1993},
+  publisher={Springer}
+}
+@article{ratliff2009learning,
+  title={Learning to search: Functional gradient techniques for imitation learning},
+  author={Ratliff, Nathan D and Silver, David and Bagnell, J Andrew},
+  journal={Autonomous Robots},
+  volume={27},
+  number={1},
+  pages={25--53},
+  year={2009},
+  publisher={Springer}
+}
+@article{lecun2006off,
+  title={Off-road obstacle avoidance through end-to-end learning},
+  author={LeCun, Yann and Muller, Urs and Ben, Jan and Cosatto, Eric and Flepp, Beat},
+  journal={Advances in neural information processing systems},
+  volume={18},
+  pages={739},
+  year={2006},
+  publisher={MIT; 1998}
+}
+@article{friedman2001greedy,
+	Annote = {Cit{\'e} dans \cite{ratliff2007boosting}.},
+	Author = {Friedman, J.H.},
+	Date-Added = {2010-09-03 10:46:58 +0200},
+	Date-Modified = {2010-09-03 10:47:03 +0200},
+	Journal = {Annals of Statistics},
+	Number = {5},
+	Pages = {1189--1232},
+	Publisher = {JSTOR},
+	Title = {Greedy function approximation: a gradient boosting machine},
+	Volume = {29},
+	Year = {2001}}
+
+
+
+@article{mason1999functional,
+	Annote = {Cit{\'e} dans \cite{ratliff2007boosting}.
+
+Algo AnyBoost : set de donn{\'e}es x,y. Une s{\'e}rie de classifeurs de la forme sgn(f(x)). La marge est yf(x). On a une fonction de cout qui d{\'e}pend de la marge. En prenant le gradient de cette fonction de cout, on trouve une nouvelle feature {\`a} rajouter {\`a} f pour que f (combinaison lin{\'e}aire d'autres trucs) classifie mieux.},
+	Author = {Mason, L. and Baxter, J. and Bartlett, P.L. and Frean, M.},
+	Date-Added = {2010-09-03 10:45:10 +0200},
+	Date-Modified = {2012-11-16 09:40:16 +0000},
+	Journal = {ADVANCES IN NEURAL INFORMATION PROCESSING SYSTEMS},
+	Pages = {221--246},
+	Publisher = {MIT; 1998},
+	Title = {Functional gradient techniques for combining hypotheses},
+	Year = {1999}}
 @conference{taskar2005learning,
 	Annote = {Cit{\'e} dans \cite{ratliff2007boosting}.
 Th{\`e}se de Taskar.
